[gd_scene load_steps=14 format=2]

[ext_resource path="res://Resources/Styles/styleBoxLineBlack.tres" type="StyleBox" id=1]
[ext_resource path="res://Containers/BaseBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Styles/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Styles/RegularFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Resources/Icons/check_list.png" type="Texture" id=6]
[ext_resource path="res://Screens/ScreenFirstSesion.gd" type="Script" id=7]
[ext_resource path="res://Screens/PrincipalScreen.tscn" type="PackedScene" id=8]
[ext_resource path="res://Resources/Styles/PressedBlueButton.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Styles/NormalBlueButton.tres" type="StyleBox" id=10]
[ext_resource path="res://Resources/Styles/HoverBlueButton.tres" type="StyleBox" id=11]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ScreenFirstSesion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
principal_screen = ExtResource( 8 )

[node name="Background" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.380392, 0.439216, 0.529412, 1 )

[node name="TopBar" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="TopBar"]
anchor_right = 1.0
margin_bottom = 91.0

[node name="HSeparator" type="HSeparator" parent="TopBar"]
anchor_right = 1.0
margin_top = 89.0
margin_bottom = 93.0
custom_styles/separator = ExtResource( 1 )

[node name="Title" type="Label" parent="TopBar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_top = 13.0
margin_right = 230.0
margin_bottom = 75.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Simple To-Do List"

[node name="TextureRect" type="TextureRect" parent="TopBar"]
margin_left = 347.0
margin_top = 21.0
margin_right = 395.0
margin_bottom = 69.0
texture = ExtResource( 6 )

[node name="DataBox" type="Node" parent="."]

[node name="BaseBox" parent="DataBox" instance=ExtResource( 2 )]
margin_left = -216.0
margin_top = -145.0
margin_right = 214.0
margin_bottom = 235.0

[node name="Title" parent="DataBox/BaseBox" index="0"]
margin_left = -189.5
margin_top = 5.0
margin_right = 189.5
margin_bottom = 67.0
text = "¡Bienvenido/a!"

[node name="Instruction" type="Label" parent="DataBox/BaseBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.5
margin_top = -94.0
margin_right = 183.5
margin_bottom = -44.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Escribí tu nombre:"

[node name="LineEdit" type="LineEdit" parent="DataBox/BaseBox"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.0
margin_top = -24.0
margin_right = 177.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )

[node name="ContinueButton" type="Button" parent="DataBox/BaseBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -94.5
margin_top = -126.0
margin_right = 94.5
margin_bottom = -77.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
text = "Continuar"

[connection signal="pressed" from="DataBox/BaseBox/ContinueButton" to="." method="_on_ContinueButton_pressed"]

[editable path="DataBox/BaseBox"]
